<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UrQA-StressTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="api_key">API KEY</string>
    <string name="port">PORT</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="send_data_list">SEND DATA LIST</string>
    <string name="delete_file">DELETE FILE</string>
    <string name="check">Check</string>
    <string name="running">Running</string>
    <string name="stopping">Stopping</string>
    <string name="time">Time</string>
    <string name="count">Count</string>

    <string name="error_empty_text">Text is empty</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="execute_service">background</string>



</resources>
