<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.urqa.alpha.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/api_key"/>

            <EditText
                android:id="@+id/key_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/api_key"
                android:inputType="text"
                android:maxLength="20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/port"/>

            <EditText
                android:id="@+id/port_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/port"
                android:inputType="number"
                android:maxLength="6"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count"/>

            <EditText
                android:id="@+id/count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/count"
                android:maxLength="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"/>

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/execute_service"/>

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/off"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on"/>

                <RadioButton
                    android:id="@+id/off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off"/>
            </RadioGroup>
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/file_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="15sp"/>
        </FrameLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"/>

            <Button
                android:id="@+id/stop_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop"/>
        </FrameLayout>


        <Button
            android:id="@+id/result_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_data_list"
            android:visibility="gone"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView
            android:id="@+id/check_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/check"
            android:textColor="#039"
            android:textSize="30sp"/>
    </LinearLayout>


</RelativeLayout>
